--- a/src/app/components/playlists-overview/playlists-overview.component.html
+++ b/src/app/components/playlists-overview/playlists-overview.component.html
@@ -4,7 +4,9 @@
   <app-playlists
     class="flex-item playlists"
     fxFlex="25%"
-    (selectedPlaylistChange)="playlist.setPlaylist($event)">
+    (selectedPlaylistChange)="playlist.setPlaylist($event)"
+    (selectedTracksChange)="playlist.setTracks($event)"
+  >
   </app-playlists>
   <app-playlist
     #playlist
